--- a/src/components/interrogative-debugging/version-2/ir-header/ir-header.css
+++ b/src/components/interrogative-debugging/version-2/ir-header/ir-header.css
@@ -101,6 +101,8 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #CECDCE transparent;
 }
 
 .dropdown-content::-webkit-scrollbar-track {
